Fix links and text alignment

--- a/styles.css
+++ b/styles.css
@@ -25,9 +25,13 @@ body {
 .links {
     display: flex;
     flex-direction: row;
+    gap: 24px;
+}
+
+a {
     font-size: 18px;
     color: #e5e7eb;
-    gap: 24px;
+    text-decoration: none;
 }
 
 .top-text-and-image {
@@ -89,7 +93,7 @@ body {
 
 .middle-container {
     display: flex;
-    gap: 50px;
+    gap: 75px;
 }
 
 .middle-images {
@@ -100,16 +104,17 @@ body {
 }
 
 .middle-images img {
-    height: 120px;
-    width: 120px;
+    height: 150px;
+    width: 150px;
     border: 3px solid #3882f6;
     border-radius: 10px;
 }
 
 .middle-images p {
-    width: 120px;
+    width: 150px;
     font-size: 18px;
     color: #898989;
+    text-align: center;
 }
 
 .middle-quote {
